--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,10 +11,10 @@
       <link rel="stylesheet" href="/stylesheets/style.css" />
    </head>
 
-   <body>
+    <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">LogoHere</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,21 +24,25 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/characters">Characters</a>
+                <a class="nav-link" href="/characters">Recipes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
+                <a class="nav-link" href="/profile">My menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/auth/signup">Signup</a>
+                <a class="nav-link" href="/auth/signup">My favorites</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/auth/login">Login</a>
+                <a class="nav-link" href="/auth/login">Profile</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+    </header>
+
+   <body>
+         
       {{{body}}}
       <!-- JavaScript Bundle with Popper -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
