--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,21 @@
 <section class="form-wrapper">
 
-<div>
+<div class="form-menu">
   <a class="nav-link" href="/auth/signup">Signup</a>
   <a class="nav-link" href="/auth/login">Login</a>
    <a class="nav-link" href="/auth/logout">Logout</a>
 </div>
 
-<div>
+<div class="form">
   <form action="/auth/signup" method="POST">
-    <label> Username
+    <label> Username <br>
         <input type="text" name="username">
     </label>
-    <label> Password
+    <br>
+    <label> Password <br>
         <input type="password" name="password">
     </label>
-
+    <br>
     <button type="submit">Submit</button>
   </form>
 </div>
