--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,20 @@ body {
   border-radius: 10px;
 }
 
+.form-menu{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-between;
+  margin-top: 5%;
+}
+
+.form{
+  
+}
+
 a {
   color: #00b7ff;
 }
