--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/recipes">Characters</a>
+                <a class="nav-link" href="/recipes">Recipes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/profile">My menu</a>
