--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,13 @@
 <section class="form-wrapper">
 
 <div class="form-menu">
-  <a class="nav-link" href="/auth/signup">Signup</a>
-  <a class="nav-link" href="/auth/login">Login</a>
-   <a class="nav-link" href="/auth/logout">Logout</a>
+  <a id="signup" href="/auth/signup">Signup</a>
+  <a class="auth-link" href="/auth/login">Login</a>
+   <a class="auth-link" href="/auth/logout">Logout</a>
 </div>
 
-<div class="form">
-  <form action="/auth/signup" method="POST">
+<div>
+  <form action="/auth/signup" method="POST" class="form">
     <label> Username <br>
         <input type="text" name="username">
     </label>
@@ -16,7 +16,7 @@
         <input type="password" name="password">
     </label>
     <br>
-    <button type="submit">Submit</button>
+    <button class="submit-button" type="submit">Submit</button>
   </form>
 </div>
 
