--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,13 +27,13 @@
                 <a class="nav-link" href="/recipes">Recipes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/profile">My menu</a>
+                <a class="nav-link" href="/my-menu">My menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/auth/signup">My favorites</a>
+                <a class="nav-link" href="/favorites">My favorites</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/auth/login">Profile</a>
+                <a class="nav-link" href="/profile">Profile</a>
               </li>
             </ul>
           </div>
