--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,29 +1,12 @@
+<h1>Esto es la home, si ya has hecho login</h1>
+
 <section class="form-wrapper">
+
+
 
 <div class="form-menu">
   <a id="login" href="/auth/login">Login</a>
   {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
-</div>
-
-
-<div>
-  <form action="/auth/signup" method="POST" class="form">
-    <label> Username <br>
-    <input type="text" name="username">
-    </label>
-
-    <br>
-
-    <label> Password <br>
-    <input type="password" name="password">
-    </label>
-
-    <br>
-
-    <button class="submit-button" type="submit">Submit</button>
-    
-    <p class="text-form">Not registred? <a class="auth-link" href="/auth/signup">Signup</a></p>
-  </form>
 </div>
 
 </section>
