--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,13 +1,33 @@
-<form action="/auth/login" method="POST">
-   <label> Username
-      <input type="text" name="username">
-   </label>
-   <label> Password
-      <input type="password" name="password">
-   </label>
+<section class="form-wrapper">
+<h1>Estás en el Login!</h1>
 
-   <button type="submit">Submit</button>
-</form>
+<div class="form-menu">
+  <a id="login" href="/auth/login">Login</a>
+  {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
+</div>
+
+
+<div>
+  <form action="/auth/login" method="POST" class="form">
+    <label> Username <br>
+    <input type="text" name="username">
+    </label>
+
+    <br>
+
+    <label> Password <br>
+    <input type="password" name="password">
+    </label>
+
+    <br>
+
+    <button class="submit-button" type="submit">Submit</button>
+    
+    <p class="text-form">Not registred? <a class="auth-link" href="/auth/signup">Signup</a></p>
+  </form>
+</div>
+
+</section>
 
 {{#if errorMessage}}
 <p class="error">{{errorMessage}}</p>
