--- a/views/recipes/list.hbs
+++ b/views/recipes/list.hbs
@@ -2,6 +2,14 @@
   <h1>Choose your favorites recipes!</h1>
 
   <div class='row row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
+    <div>
+    <div>
+        <form action="/recipe-search" method="POST">
+        <input type="text" name="search" placeholder="Search for ingredients">
+        <button type="submit">Search</button>
+        </form>
+    </div>
+</div> 
   {{!-- image name status --}}
     {{#each recipes}}
     <div class='col'>
