--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>{{title}}</title>
       <!-- CSS only -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
       <link rel="stylesheet" href="/stylesheets/style.css" />
    </head>
@@ -34,6 +35,11 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/profile">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a href="/auth/logout">
+                  <i class="fa fa-solid fa-arrow-right"></i>
+                </a>
               </li>
             </ul>
           </div>
