funciona filtrar pero falta enseñar imagenes

--- a/views/recipes/recipe-search.hbs
+++ b/views/recipes/recipe-search.hbs
@@ -1,7 +1,7 @@
 {{#each data}}
 
 <div>
-    <h1>{{this.recipe}}</h1>
+    <h1>{{this.title}}</h1>
     <a href="/recipes/{{this.id}}">View recipes</a>
 </div>
 
