--- a/views/recipes/recipe-search.hbs
+++ b/views/recipes/recipe-search.hbs
@@ -2,7 +2,7 @@
 
 <div>
     <h1>{{this.title}}</h1>
-    <a href="/recipes/{{this.id}}">View recipes</a>
+       <img src="{{this.image}}" alt="">
 </div>
 
 {{/each}} 
