--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,5 +1,4 @@
 <section class="form-wrapper">
-<h1>Estás en el Signup!</h1>
 
 <div class="form-menu">
   <a id="signup" href="/auth/signup">Signup</a>
@@ -20,7 +19,7 @@
 
     <br>
 
-    <button class="submit-button" type="submit">Submit</button>
+    <button class="button" type="submit">Submit</button>
   </form>
 </div>
 
