--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,7 @@
-<h1>Esto es la home, si ya has hecho login</h1>
-
-<section class="form-wrapper">
-
-
+<section class="form">
 
 <div class="form-menu">
-  <a id="login" href="/auth/login">Login</a>
+  <a class="button" id="login" href="/auth/login">Login</a>
   {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
 </div>
 
