--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,9 +37,7 @@
                 <a class="nav-link" href="/profile">Profile</a>
               </li>
               <li class="nav-item">
-                <a href="/auth/logout">
-                  <i class="fa fa-solid fa-arrow-right"></i>
-                </a>
+                <a class="nav-link" href="/auth/logout">logout</a>
               </li>
             </ul>
           </div>
