--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,4 @@
 <section class="form-wrapper">
-<h1>Estás en el Login!</h1>
 
 <div class="form-menu">
   <a id="login" href="/auth/login">Login</a>
@@ -21,7 +20,7 @@
 
     <br>
 
-    <button class="submit-button" type="submit">Submit</button>
+    <button class="button" type="submit">Submit</button>
     
     <p class="text-form">Not registred? <a class="auth-link" href="/auth/signup">Signup</a></p>
   </form>
