ya guarda la receta base datos

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,8 @@
 <section class="form">
 
 <div class="form-menu">
-  <a class="button" id="login" href="/auth/login">Login</a>
+  <p1>Planifica tu menú semanal</p1>
+  <a class="button" id="login" href="/auth/login">Empezamos</a>
   {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
 </div>
 
