--- a/views/recipes/recipe-search.hbs
+++ b/views/recipes/recipe-search.hbs
@@ -2,7 +2,10 @@
 
 <div>
     <h1>{{this.title}}</h1>
-       <img src="{{this.image}}" alt="">
+        <a class="image"
+        href="recipes/eachRecipe">
+        <img src="{{this.image}}" alt="">
+        </a>
 </div>
 
 {{/each}} 
