--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,10 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <i class="fa-solid fa-avocado"></i>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <img src="../img/logo-no-fondo.png" alt="logo aguacate">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -44,7 +41,7 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header>                   
 
    <body>
          
