changing images folder and home in english

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,7 @@
 <section class="form">
-
+  <h1>Do you want your own weekly menu planner?</h1>
 <div class="form-menu">
-  <p1>Planifica tu menú semanal</p1>
-  <a class="button" id="login" href="/auth/login">Empezamos</a>
+  <a class="button" id="login" href="/auth/login">Let's Start!</a>
   {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
 </div>
 
