Logo finished on navbar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <img src="images/logo-no-fondo.png" alt="logo aguacate">
+          <img class="logo" src="images/logo-no-fondo.png" alt="logo aguacate">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
