botón let's start lleva a recipes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <section class="form">
   <h3>Do you want your own weekly menu planner?</h3>
 <div class="form-menu">
-  <a class="button" id="login" href="/auth/login">Let's Start!</a>
+  <a class="button" id="login" href="/recipes">Let's Start!</a>
   {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
 </div>
 
