--- a/views/recipes/my-menu.hbs
+++ b/views/recipes/my-menu.hbs
@@ -1,25 +1,27 @@
-<table class="table">
-  <thead>
-    <th></th>
-    <th>Monday</th>
-    <th>Tuesday</th>
-    <th>Wednesday</th>
-    <th>Thursday</th>
-    <th>Friday</th>
-    <th>Saturday</th>
-    <th>Sunday</th>
-  </thead>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+      <th></th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+      <th>Sunday</th>
+    </thead>
 
-  <tbody>
-    <tr>
-      <td>comida</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>cena</td>
-      <td></td>
-      <td></td>
-    </tr> 
-  </tbody>
-</table>
+    <tbody>
+      <tr>
+        <td>comida</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>cena</td>
+        <td></td>
+        <td></td>
+      </tr> 
+    </tbody>
+  </table>
+</div>
