--- a/views/recipes/my-menu.hbs
+++ b/views/recipes/my-menu.hbs
@@ -12,15 +12,26 @@
     </thead>
 
     <tbody>
-      <tr>
+      <tr class="table-light">
         <td>comida</td>
         <td></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
-      <tr>
+      <tr class="table-light">
         <td>cena</td>
         <td></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+       
       </tr> 
     </tbody>
   </table>
