--- a/views/recipes/eachRecipe.hbs
+++ b/views/recipes/eachRecipe.hbs
@@ -5,7 +5,7 @@
         <p>{{recipe.summary}}</p>
         <form action = "/add-favorite" method="POST">
           <input type="hidden" name="apiId" value={{recipe.id}}>
-          <input type="hidden" name="title" value={{recipe.title}}>
+          <input type="hidden" name="title" value="{{recipe.title}}">
           <input type="hidden" name="summary" value={{recipe.summary}}>
           <input type="hidden" name="image" value={{recipe.image}}>
           <button type="submit">Añadir a favoritos</button>
