--- a/views/recipes/list.hbs
+++ b/views/recipes/list.hbs
@@ -13,11 +13,12 @@
     {{#each recipes}}
     <div class='col'>
       <div class='card shadow-sm'>
-        <a class="image"
-        href="recipes/{{this.id}}">
-        <img src="{{this.image}}" alt="">
+        <a class="image" href="recipes/{{this.id}}">
+          <img src="{{this.image}}" alt="">
         </a>
+        
         <p>{{this.title}}</p>
+       
       </div>
     </div>
     {{/each}}    
