--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,15 +8,15 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>{{title}}</title>
       <!-- CSS only -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+      {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> --}}
       <link rel="stylesheet" href="/stylesheets/style.css" />
    </head>
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fafbe9;">
         <div class="container-fluid">
-        <img class="logo" src="images/logo-no-fondo.png" alt="logo aguacate">
+          <img class="logo" src="images/logo-no-fondo.png" alt="logo aguacate">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
