--- a/views/recipes/favorites.hbs
+++ b/views/recipes/favorites.hbs
@@ -1,7 +1,7 @@
     
 
 {{#each favorites}}
-  <div class='row row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
+  <div class='row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
     <div class='col'>
       <div class='card shadow-sm'>
         <a href="recipes/{{this.apiId}}">
