--- a/views/recipes/list.hbs
+++ b/views/recipes/list.hbs
@@ -8,7 +8,7 @@
       </form>
     </div>
 
-  <div class='row row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
+  <div class='row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 my-5'>
    {{!-- image name status --}}
     {{#each recipes}}
     <div class='col'>
