--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -13,13 +13,9 @@
             <h3>About me</h3>
             <div class="info_data">
               <div>  <label for="email">
-          <textarea name="description" placeholder="add your email here"></textarea></div>
+          <textarea name="email" placeholder="add your email here">{{user.email}}</textarea></div>
                
         </label>
-                 <div class="data">
-                   <h4>Phone Number</h4>
-                    <p>0001-213-998761</p>
-              </div>
             </div>
         </div>
       
@@ -29,14 +25,14 @@
                  <div class="data">
                     <h4>Allergies</h4>
                      <label for="email">
-          <textarea name="allergies" placeholder="add your email here"></textarea></div>
+          <textarea name="allergies" placeholder="add your allergies here">{{user.allergies}}</textarea></div>
                
         </label>
                  </div>
                  <div class="data">
                    <h4>Special diets</h4>
                      <label for="email">
-          <textarea name="diets" placeholder="add your email here"></textarea></div>
+          <textarea name="specialDiets" placeholder="add your special diets here">{{user.specialDiets}}</textarea></div>
                
         </label>
               </div>
