--- a/views/recipes/recipe-search.hbs
+++ b/views/recipes/recipe-search.hbs
@@ -3,7 +3,7 @@
 <div>
     <h1>{{this.title}}</h1>
         <a class="image"
-        href="recipes/eachRecipe">
+        href="recipes/{{this.id}}">
         <img src="{{this.image}}" alt="">
         </a>
 </div>
