--- a/views/recipes/favorites.hbs
+++ b/views/recipes/favorites.hbs
@@ -10,7 +10,7 @@
         
         <p>{{title}}</p>
         
-        <p>{{summary}}</p> 
+        <p>{{{summary}}}</p> 
         
         <form action = "/delete-favorite" method="POST">
           <input type="hidden" name="apiId" value={{this.id}}>
