cambio mongo uri

--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -2,7 +2,7 @@
      
 <div class="wrapper">
     <div class="left">
-        <img src="https://i.imgur.com/cMy8V5j.png" alt="user" width="100">
+        <img src="https://i.pinimg.com/originals/a3/6c/43/a36c431e961a86c9c79270da2feac2fa.jpg" alt="user" width="100">
         <p>Welcome to your profile</p>
         <h4>{{user.username}}</h4>
       
