--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,29 @@
 <section class="form">
   <h3>Do you want your own weekly menu planner?</h3>
-<div class="form-menu">
-  <a class="button" id="login" href="/recipes">Let's Start!</a>
-  {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
-</div>
+  <div class="form-menu">
+    <a class="button" id="login" href="/recipes">Let's Start!</a>
+    {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
+  </div>
+
+  <ul class="cb-slideshow">
+    <li>
+      <span><img src="images/comida1.jpg" alt="comida1"></span>
+    </li>
+    <li>
+      <span><img src="images/comida-2.jpg" alt="comida2"></span>
+    </li>
+    <li>
+      <span><img src="images/comida-3.jpg" alt="comida3"></span>
+    </li>
+    <li>
+      <span><img src="images/comida-4.jpg" alt="comida4"></span>
+    </li>
+    <li>
+      <span><img src="images/comida-5.jpg" alt="comida5"></span>
+    </li>
+    <li>
+      <span><img src="images/comida-6.jpg" alt="comida6"></span>
+    </li>
+  </ul>
 
 </section>
