tabla casi hecha

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
   </div>
 
-  <ul class="cb-slideshow">
+  {{!-- <ul class="cb-slideshow">
     <li>
       <span><img src="images/comida1.jpg" alt="comida1"></span>
     </li>
@@ -24,6 +24,6 @@
     <li>
       <span><img src="images/comida-6.jpg" alt="comida6"></span>
     </li>
-  </ul>
+  </ul> --}}
 
 </section>
