--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
    </head>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fafbe9;">
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #E8D5B5;">
         <div class="container-fluid">
           <img class="logo" src="/images/logo-no-fondo.png" alt="logo aguacate">
           <div class="collapse navbar-collapse" id="navbarNav">
