--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,29 +1,6 @@
-<section class="form">
-  <h3>Do you want your own weekly menu planner?</h3>
-  <div class="form-menu">
-    <a class="button" id="login" href="/recipes">Let's Start!</a>
-    {{!-- <a class="auth-link" href="/auth/logout">Logout</a> --}}
-  </div>
 
-  {{!-- <ul class="cb-slideshow">
-    <li>
-      <span><img src="images/comida1.jpg" alt="comida1"></span>
-    </li>
-    <li>
-      <span><img src="images/comida-2.jpg" alt="comida2"></span>
-    </li>
-    <li>
-      <span><img src="images/comida-3.jpg" alt="comida3"></span>
-    </li>
-    <li>
-      <span><img src="images/comida-4.jpg" alt="comida4"></span>
-    </li>
-    <li>
-      <span><img src="images/comida-5.jpg" alt="comida5"></span>
-    </li>
-    <li>
-      <span><img src="images/comida-6.jpg" alt="comida6"></span>
-    </li>
-  </ul> --}}
+<section class="fondo-text form">
+  <h3>Are you studing a Bootcamp<br>so you have no time to think about your meal?</h3>
 
+  <a class="button" id="login" href="/recipes">Let's Start!</a> 
 </section>
