--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   /* width: auto; */
-  background: #9AACCF;
+  background: #E8D5B5;
   border-radius: 10px;
   /* s */
   /* margin: 40px 25px 10px 25px; */
@@ -133,7 +133,7 @@ a {
 
 h3 {
   font-size: 30px;
-  color: #E8D5B5;
+  color: #6682B1;
   margin: 40px 25px 25px 25px;
 }
 
