--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,11 @@
+<div class="home">
+  <section class="fondo-text form ">
+    <h3>Are you studing a Bootcamp<br>so you have no time to think about your meal?</h3>
 
-<section class="fondo-text form ">
-  <h3>Are you studing a Bootcamp<br>so you have no time to think about your meal?</h3>
+    <a class="button" id="login" href="/recipes">Let's Start!</a> 
 
-  <a class="button" id="login" href="/recipes">Let's Start!</a> 
-</section>
+    
+  </section>
+
+  <i>Hecho con amor por <a href="">Irene</a> y <a href="">Belén</a>.</i>
+</div>
