--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="/profile">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/auth/logout">logout</a>
+                <a class="nav-link" href="/auth/logout">Logout</a>
               </li>
             </ul>
           </div>
