--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,16 +5,6 @@ body {
   background-size: cover;
 }
 
-  body:before {
-	content:'';
-	position: absolute;
-  top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(255,247,255,0.4);
-}  
-
 .home{
 display: flex;
 flex-direction: column;
@@ -152,6 +142,7 @@ h3 {
 .logo{
   height: 50px;
   margin-right: 5px;
+  margin-left: 30px;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
