--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,5 +7,5 @@
     
   </section>
 
-  <i>Hecho con amor por <a href="">Irene</a> y <a href="">Belén</a>.</i>
+  <i>Hecho con amor por <a href="https://github.com/IreneCar">Irene</a> y <a href="https://github.com/belendi1999">Belén</a>.</i>
 </div>
