--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
    </head>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #E8D5B5;">
         <div class="container-fluid">
           <img class="logo" src="images/logo-no-fondo.png" alt="logo aguacate">
           <div class="collapse navbar-collapse" id="navbarNav">
