--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -2,7 +2,7 @@
      
 <div class="wrapper">
     <div class="left">
-        <img src="https://i.pinimg.com/originals/a3/6c/43/a36c431e961a86c9c79270da2feac2fa.jpg" alt="user" width="100">
+        <img src="/images/av-8.jpg" alt="user" width="100">
         <p>Welcome to your profile</p>
         <h4>{{user.username}}</h4>
       
@@ -13,9 +13,8 @@
             <h3>About me</h3>
             <div class="info_data">
               <div>  <label for="email">
-          <textarea name="email" placeholder="add your email here">{{user.email}}</textarea></div>
-               
-        </label>
+                <textarea name="email" placeholder="add your email here">{{user.email}}</textarea></div>
+               </label>
             </div>
         </div>
       
@@ -25,21 +24,21 @@
                  <div class="data">
                     <h4>Allergies</h4>
                      <label for="email">
-          <textarea name="allergies" placeholder="add your allergies here">{{user.allergies}}</textarea></div>
+                      <textarea name="allergies" placeholder="add your allergies here">{{user.allergies}}</textarea></div>
                
-        </label>
-                 </div>
+                    </label>
+                  </div>
                  <div class="data">
                    <h4>Special diets</h4>
                      <label for="email">
-          <textarea name="specialDiets" placeholder="add your special diets here">{{user.specialDiets}}</textarea></div>
+                       <textarea name="specialDiets" placeholder="add your special diets here">{{user.specialDiets}}</textarea></div>
                
-        </label>
-              </div>
-              <button type="submit">Update profile</button>
+                      </label>
+                  </div>
+                  <button class="button" type="submit">Update profile</button>
             </div>
-        </div>
-      </form>
+      </div>
+  </form>
         
     
     </div>
